src/compiler/snuqasm-parser/snuqasmParser.cpp

// Generated from snuqasm.g4 by ANTLR 4.12.0


#include "snuqasmListener.h"

#include "snuqasmParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct SnuqasmParserStaticData final {
  SnuqasmParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  SnuqasmParserStaticData(const SnuqasmParserStaticData&) = delete;
  SnuqasmParserStaticData(SnuqasmParserStaticData&&) = delete;
  SnuqasmParserStaticData& operator=(const SnuqasmParserStaticData&) = delete;
  SnuqasmParserStaticData& operator=(SnuqasmParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag snuqasmParserOnceFlag;
SnuqasmParserStaticData *snuqasmParserStaticData = nullptr;

void snuqasmParserInitialize() {
  assert(snuqasmParserStaticData == nullptr);
  auto staticData = std::make_unique<SnuqasmParserStaticData>(
    std::vector<std::string>{
      "mainprogram", "version", "program", "include", "statement", "decl", 
      "quantumDecl", "classicalDecl", "gatedeclStatement", "goplist", "opaqueDeclStatement", 
      "qopStatement", "uopStatement", "measureQop", "resetQop", "ifStatement", 
      "barrierStatement", "unitaryOp", "customOp", "anylist", "idlist", 
      "designatedIdentifier", "mixedlist", "arglist", "argument", "explist", 
      "exp", "binop", "unaryop"
    },
    std::vector<std::string>{
      "", "'SNUQASM'", "';'", "'include'", "'qreg'", "'['", "']'", "'creg'", 
      "'gate'", "'{'", "'}'", "'('", "')'", "'opaque'", "'measure'", "'->'", 
      "'reset'", "'if'", "'=='", "'barrier'", "'U'", "'u'", "'CX'", "','", 
      "'id'", "'h'", "'x'", "'y'", "'z'", "'sx'", "'sy'", "'s'", "'sdg'", 
      "'t'", "'tdg'", "'rx'", "'ry'", "'rz'", "'u1'", "'u2'", "'u3'", "'swap'", 
      "'cx'", "'cy'", "'cz'", "'ch'", "'crx'", "'cry'", "'crz'", "'cu1'", 
      "'cu2'", "'cu3'", "'ccx'", "'pi'", "'-'", "'+'", "'*'", "'/'", "'^'", 
      "'sin'", "'cos'", "'tan'", "'exp'", "'ln'", "'sqrt'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "StringLiteral", 
      "Real", "Integer", "Decimal", "SciSuffix", "Identifier", "Whitespace", 
      "Newline", "LineComment", "BlockComment"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  snuqasmParserStaticData = staticData.release();
}

}

snuqasmParser::snuqasmParser(TokenStream *input) : snuqasmParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

snuqasmParser::snuqasmParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  snuqasmParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *snuqasmParserStaticData->atn, snuqasmParserStaticData->decisionToDFA, snuqasmParserStaticData->sharedContextCache, options);
}

snuqasmParser::~snuqasmParser() {
  delete _interpreter;
}

const atn::ATN& snuqasmParser::getATN() const {
  return *snuqasmParserStaticData->atn;
}

std::string snuqasmParser::getGrammarFileName() const {
  return "snuqasm.g4";
}

const std::vector<std::string>& snuqasmParser::getRuleNames() const {
  return snuqasmParserStaticData->ruleNames;
}

const dfa::Vocabulary& snuqasmParser::getVocabulary() const {
  return snuqasmParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView snuqasmParser::getSerializedATN() const {
  return snuqasmParserStaticData->serializedATN;
}


//----------------- MainprogramContext ------------------------------------------------------------------

snuqasmParser::MainprogramContext::MainprogramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

snuqasmParser::VersionContext* snuqasmParser::MainprogramContext::version() {
  return getRuleContext<snuqasmParser::VersionContext>(0);
}

snuqasmParser::ProgramContext* snuqasmParser::MainprogramContext::program() {
  return getRuleContext<snuqasmParser::ProgramContext>(0);
}


size_t snuqasmParser::MainprogramContext::getRuleIndex() const {
  return snuqasmParser::RuleMainprogram;
}

void snuqasmParser::MainprogramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMainprogram(this);
}

void snuqasmParser::MainprogramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMainprogram(this);
}

snuqasmParser::MainprogramContext* snuqasmParser::mainprogram() {
  MainprogramContext *_localctx = _tracker.createInstance<MainprogramContext>(_ctx, getState());
  enterRule(_localctx, 0, snuqasmParser::RuleMainprogram);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(58);
    version();
    setState(59);
    program(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VersionContext ------------------------------------------------------------------

snuqasmParser::VersionContext::VersionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* snuqasmParser::VersionContext::Real() {
  return getToken(snuqasmParser::Real, 0);
}


size_t snuqasmParser::VersionContext::getRuleIndex() const {
  return snuqasmParser::RuleVersion;
}

void snuqasmParser::VersionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVersion(this);
}

void snuqasmParser::VersionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVersion(this);
}

snuqasmParser::VersionContext* snuqasmParser::version() {
  VersionContext *_localctx = _tracker.createInstance<VersionContext>(_ctx, getState());
  enterRule(_localctx, 2, snuqasmParser::RuleVersion);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(61);
    match(snuqasmParser::T__0);
    setState(62);
    match(snuqasmParser::Real);
    setState(63);
    match(snuqasmParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramContext ------------------------------------------------------------------

snuqasmParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

snuqasmParser::StatementContext* snuqasmParser::ProgramContext::statement() {
  return getRuleContext<snuqasmParser::StatementContext>(0);
}

snuqasmParser::IncludeContext* snuqasmParser::ProgramContext::include() {
  return getRuleContext<snuqasmParser::IncludeContext>(0);
}

snuqasmParser::ProgramContext* snuqasmParser::ProgramContext::program() {
  return getRuleContext<snuqasmParser::ProgramContext>(0);
}


size_t snuqasmParser::ProgramContext::getRuleIndex() const {
  return snuqasmParser::RuleProgram;
}

void snuqasmParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void snuqasmParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


snuqasmParser::ProgramContext* snuqasmParser::program() {
   return program(0);
}

snuqasmParser::ProgramContext* snuqasmParser::program(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  snuqasmParser::ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, parentState);
  snuqasmParser::ProgramContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 4;
  enterRecursionRule(_localctx, 4, snuqasmParser::RuleProgram, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(68);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case snuqasmParser::T__3:
      case snuqasmParser::T__6:
      case snuqasmParser::T__7:
      case snuqasmParser::T__12:
      case snuqasmParser::T__13:
      case snuqasmParser::T__15:
      case snuqasmParser::T__16:
      case snuqasmParser::T__18:
      case snuqasmParser::T__19:
      case snuqasmParser::T__20:
      case snuqasmParser::T__21:
      case snuqasmParser::T__23:
      case snuqasmParser::T__24:
      case snuqasmParser::T__25:
      case snuqasmParser::T__26:
      case snuqasmParser::T__27:
      case snuqasmParser::T__28:
      case snuqasmParser::T__29:
      case snuqasmParser::T__30:
      case snuqasmParser::T__31:
      case snuqasmParser::T__32:
      case snuqasmParser::T__33:
      case snuqasmParser::T__34:
      case snuqasmParser::T__35:
      case snuqasmParser::T__36:
      case snuqasmParser::T__37:
      case snuqasmParser::T__38:
      case snuqasmParser::T__39:
      case snuqasmParser::T__40:
      case snuqasmParser::T__41:
      case snuqasmParser::T__42:
      case snuqasmParser::T__43:
      case snuqasmParser::T__44:
      case snuqasmParser::T__45:
      case snuqasmParser::T__46:
      case snuqasmParser::T__47:
      case snuqasmParser::T__48:
      case snuqasmParser::T__49:
      case snuqasmParser::T__50:
      case snuqasmParser::T__51:
      case snuqasmParser::Identifier: {
        setState(66);
        statement();
        break;
      }

      case snuqasmParser::T__2: {
        setState(67);
        include();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(76);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(74);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<ProgramContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleProgram);
          setState(70);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(71);
          statement();
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<ProgramContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleProgram);
          setState(72);

          if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
          setState(73);
          include();
          break;
        }

        default:
          break;
        } 
      }
      setState(78);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- IncludeContext ------------------------------------------------------------------

snuqasmParser::IncludeContext::IncludeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* snuqasmParser::IncludeContext::StringLiteral() {
  return getToken(snuqasmParser::StringLiteral, 0);
}


size_t snuqasmParser::IncludeContext::getRuleIndex() const {
  return snuqasmParser::RuleInclude;
}

void snuqasmParser::IncludeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInclude(this);
}

void snuqasmParser::IncludeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInclude(this);
}

snuqasmParser::IncludeContext* snuqasmParser::include() {
  IncludeContext *_localctx = _tracker.createInstance<IncludeContext>(_ctx, getState());
  enterRule(_localctx, 6, snuqasmParser::RuleInclude);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79);
    match(snuqasmParser::T__2);
    setState(80);
    match(snuqasmParser::StringLiteral);
    setState(81);
    match(snuqasmParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

snuqasmParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

snuqasmParser::DeclContext* snuqasmParser::StatementContext::decl() {
  return getRuleContext<snuqasmParser::DeclContext>(0);
}

snuqasmParser::GatedeclStatementContext* snuqasmParser::StatementContext::gatedeclStatement() {
  return getRuleContext<snuqasmParser::GatedeclStatementContext>(0);
}

snuqasmParser::OpaqueDeclStatementContext* snuqasmParser::StatementContext::opaqueDeclStatement() {
  return getRuleContext<snuqasmParser::OpaqueDeclStatementContext>(0);
}

snuqasmParser::QopStatementContext* snuqasmParser::StatementContext::qopStatement() {
  return getRuleContext<snuqasmParser::QopStatementContext>(0);
}

snuqasmParser::IfStatementContext* snuqasmParser::StatementContext::ifStatement() {
  return getRuleContext<snuqasmParser::IfStatementContext>(0);
}

snuqasmParser::BarrierStatementContext* snuqasmParser::StatementContext::barrierStatement() {
  return getRuleContext<snuqasmParser::BarrierStatementContext>(0);
}


size_t snuqasmParser::StatementContext::getRuleIndex() const {
  return snuqasmParser::RuleStatement;
}

void snuqasmParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void snuqasmParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

snuqasmParser::StatementContext* snuqasmParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 8, snuqasmParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(89);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case snuqasmParser::T__3:
      case snuqasmParser::T__6: {
        enterOuterAlt(_localctx, 1);
        setState(83);
        decl();
        break;
      }

      case snuqasmParser::T__7: {
        enterOuterAlt(_localctx, 2);
        setState(84);
        gatedeclStatement();
        break;
      }

      case snuqasmParser::T__12: {
        enterOuterAlt(_localctx, 3);
        setState(85);
        opaqueDeclStatement();
        break;
      }

      case snuqasmParser::T__13:
      case snuqasmParser::T__15:
      case snuqasmParser::T__19:
      case snuqasmParser::T__20:
      case snuqasmParser::T__21:
      case snuqasmParser::T__23:
      case snuqasmParser::T__24:
      case snuqasmParser::T__25:
      case snuqasmParser::T__26:
      case snuqasmParser::T__27:
      case snuqasmParser::T__28:
      case snuqasmParser::T__29:
      case snuqasmParser::T__30:
      case snuqasmParser::T__31:
      case snuqasmParser::T__32:
      case snuqasmParser::T__33:
      case snuqasmParser::T__34:
      case snuqasmParser::T__35:
      case snuqasmParser::T__36:
      case snuqasmParser::T__37:
      case snuqasmParser::T__38:
      case snuqasmParser::T__39:
      case snuqasmParser::T__40:
      case snuqasmParser::T__41:
      case snuqasmParser::T__42:
      case snuqasmParser::T__43:
      case snuqasmParser::T__44:
      case snuqasmParser::T__45:
      case snuqasmParser::T__46:
      case snuqasmParser::T__47:
      case snuqasmParser::T__48:
      case snuqasmParser::T__49:
      case snuqasmParser::T__50:
      case snuqasmParser::T__51:
      case snuqasmParser::Identifier: {
        enterOuterAlt(_localctx, 4);
        setState(86);
        qopStatement();
        break;
      }

      case snuqasmParser::T__16: {
        enterOuterAlt(_localctx, 5);
        setState(87);
        ifStatement();
        break;
      }

      case snuqasmParser::T__18: {
        enterOuterAlt(_localctx, 6);
        setState(88);
        barrierStatement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

snuqasmParser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

snuqasmParser::QuantumDeclContext* snuqasmParser::DeclContext::quantumDecl() {
  return getRuleContext<snuqasmParser::QuantumDeclContext>(0);
}

snuqasmParser::ClassicalDeclContext* snuqasmParser::DeclContext::classicalDecl() {
  return getRuleContext<snuqasmParser::ClassicalDeclContext>(0);
}


size_t snuqasmParser::DeclContext::getRuleIndex() const {
  return snuqasmParser::RuleDecl;
}

void snuqasmParser::DeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDecl(this);
}

void snuqasmParser::DeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDecl(this);
}

snuqasmParser::DeclContext* snuqasmParser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 10, snuqasmParser::RuleDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(93);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case snuqasmParser::T__3: {
        enterOuterAlt(_localctx, 1);
        setState(91);
        quantumDecl();
        break;
      }

      case snuqasmParser::T__6: {
        enterOuterAlt(_localctx, 2);
        setState(92);
        classicalDecl();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QuantumDeclContext ------------------------------------------------------------------

snuqasmParser::QuantumDeclContext::QuantumDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* snuqasmParser::QuantumDeclContext::Identifier() {
  return getToken(snuqasmParser::Identifier, 0);
}

tree::TerminalNode* snuqasmParser::QuantumDeclContext::Integer() {
  return getToken(snuqasmParser::Integer, 0);
}


size_t snuqasmParser::QuantumDeclContext::getRuleIndex() const {
  return snuqasmParser::RuleQuantumDecl;
}

void snuqasmParser::QuantumDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuantumDecl(this);
}

void snuqasmParser::QuantumDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuantumDecl(this);
}

snuqasmParser::QuantumDeclContext* snuqasmParser::quantumDecl() {
  QuantumDeclContext *_localctx = _tracker.createInstance<QuantumDeclContext>(_ctx, getState());
  enterRule(_localctx, 12, snuqasmParser::RuleQuantumDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    match(snuqasmParser::T__3);
    setState(96);
    match(snuqasmParser::Identifier);
    setState(97);
    match(snuqasmParser::T__4);
    setState(98);
    match(snuqasmParser::Integer);
    setState(99);
    match(snuqasmParser::T__5);
    setState(100);
    match(snuqasmParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassicalDeclContext ------------------------------------------------------------------

snuqasmParser::ClassicalDeclContext::ClassicalDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* snuqasmParser::ClassicalDeclContext::Identifier() {
  return getToken(snuqasmParser::Identifier, 0);
}

tree::TerminalNode* snuqasmParser::ClassicalDeclContext::Integer() {
  return getToken(snuqasmParser::Integer, 0);
}


size_t snuqasmParser::ClassicalDeclContext::getRuleIndex() const {
  return snuqasmParser::RuleClassicalDecl;
}

void snuqasmParser::ClassicalDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterClassicalDecl(this);
}

void snuqasmParser::ClassicalDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitClassicalDecl(this);
}

snuqasmParser::ClassicalDeclContext* snuqasmParser::classicalDecl() {
  ClassicalDeclContext *_localctx = _tracker.createInstance<ClassicalDeclContext>(_ctx, getState());
  enterRule(_localctx, 14, snuqasmParser::RuleClassicalDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(102);
    match(snuqasmParser::T__6);
    setState(103);
    match(snuqasmParser::Identifier);
    setState(104);
    match(snuqasmParser::T__4);
    setState(105);
    match(snuqasmParser::Integer);
    setState(106);
    match(snuqasmParser::T__5);
    setState(107);
    match(snuqasmParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GatedeclStatementContext ------------------------------------------------------------------

snuqasmParser::GatedeclStatementContext::GatedeclStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* snuqasmParser::GatedeclStatementContext::Identifier() {
  return getToken(snuqasmParser::Identifier, 0);
}

std::vector<snuqasmParser::IdlistContext *> snuqasmParser::GatedeclStatementContext::idlist() {
  return getRuleContexts<snuqasmParser::IdlistContext>();
}

snuqasmParser::IdlistContext* snuqasmParser::GatedeclStatementContext::idlist(size_t i) {
  return getRuleContext<snuqasmParser::IdlistContext>(i);
}

snuqasmParser::GoplistContext* snuqasmParser::GatedeclStatementContext::goplist() {
  return getRuleContext<snuqasmParser::GoplistContext>(0);
}


size_t snuqasmParser::GatedeclStatementContext::getRuleIndex() const {
  return snuqasmParser::RuleGatedeclStatement;
}

void snuqasmParser::GatedeclStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGatedeclStatement(this);
}

void snuqasmParser::GatedeclStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqasmListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGatedeclStatement(this);
}

snuqasmParser::GatedeclStatementContext* snuqasmParser::gatedeclStatement() {
  GatedeclStatementContext *_localctx = _tracker.createInstance<GatedeclStatementContext>(_ctx, getState());
  enterRule(_localctx, 16, snuqasmParser::RuleGatedeclStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(158);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(109);
      match(snuqasmParser::T__7);
      setState(110);
      match(snuqasmParser::Identifier);
      setState(111);
      idlist();
      setState(112);
      match(snuqasmParser::T__8);
      setState(113);
      match(snuqasmParser::T__9);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(115);
      match(snuqasmParser::T__7);
      setState(116);
      match(snuqasmParser::Identifier);
      setState(117);
      idlist();
      setState(118);
      match(snuqasmParser::T__8);
      setState(119);
      goplist();
      setState(120);
      match(snuqasmParser::T__9);
      break;
    }
